--- a/Superheros/Views/Shared/_Layout.cshtml
+++ b/Superheros/Views/Shared/_Layout.cshtml
@@ -30,19 +30,19 @@
                 </div>
             </div>
         </div>*@
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="~/Home/Index">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="~/Superhero/Index">Superhero Listss</a>
+                    <a class="nav-link" href="~/Superhero/Index">Superhero List</a>
                 </li>
                 @*<li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
@@ -51,6 +51,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>*@
             </ul>
+            
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
