--- a/Superheros/Content/bootstrap.css
+++ b/Superheros/Content/bootstrap.css
@@ -59,7 +59,12 @@ html {
     -ms-overflow-style: scrollbar;
     -webkit-tap-highlight-color: transparent;
 }
-
+.my-nav .navbar-brand {
+    color: red;
+}
+#ntext{
+    color: red;
+}
 @-ms-viewport {
     width: device-width;
 }
@@ -4325,7 +4330,7 @@ input[type="button"].btn-block {
     }
 
     .nav-link.disabled {
-        color: #777;
+        color: red;
     }
 
 .nav-tabs {
@@ -4347,7 +4352,7 @@ input[type="button"].btn-block {
         }
 
         .nav-tabs .nav-link.disabled {
-            color: #777;
+            color: red;
             background-color: transparent;
             border-color: transparent;
         }
@@ -4371,7 +4376,7 @@ input[type="button"].btn-block {
 
     .nav-pills .nav-link.active,
     .nav-pills .show > .nav-link {
-        color: #fff;
+        color: red;
         background-color: #EB6864;
     }
 
@@ -4801,7 +4806,7 @@ input[type="button"].btn-block {
     .navbar-light .navbar-nav .active > .nav-link,
     .navbar-light .navbar-nav .nav-link.show,
     .navbar-light .navbar-nav .nav-link.active {
-        color: #000;
+        color: red;
     }
 
 .navbar-light .navbar-toggler {
@@ -4834,11 +4839,13 @@ input[type="button"].btn-block {
     }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(red, red, red, 0.5);
 }
 
     .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-        color: rgba(255, 255, 255, 0.75);
+        color: rgba(red, red, red, 0.75)
+
+        ;
     }
 
     .navbar-dark .navbar-nav .nav-link.disabled {
@@ -4849,7 +4856,7 @@ input[type="button"].btn-block {
     .navbar-dark .navbar-nav .active > .nav-link,
     .navbar-dark .navbar-nav .nav-link.show,
     .navbar-dark .navbar-nav .nav-link.active {
-        color: #fff;
+        color: red;
     }
 
 .navbar-dark .navbar-toggler {
