--- a/Superheros/Content/bootstrap.css
+++ b/Superheros/Content/bootstrap.css
@@ -1849,7 +1849,7 @@ pre {
     .table td {
         padding: 0.75rem;
         vertical-align: top;
-        border-top: 1px solid #dee2e6;
+        border-top: 1px solid #f5e626;
     }
 
     .table thead th {
@@ -2144,8 +2144,8 @@ pre {
     padding: 0.375rem 1rem;
     font-size: 1rem;
     line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
+    color: #bb282f;
+    background-color: #f5e626;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
